--- a/css/styles.css
+++ b/css/styles.css
@@ -559,10 +559,14 @@ body {
 .backdrop {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.2);
-  width: 1600px;
-  min-height: 1024px;
-  left: 1px;
-  top: 19px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0ms;
 }
 
 .modal {
@@ -571,10 +575,11 @@ body {
   left: 50%;
   width: 528px;
   min-height: 581px;
-  transform: translate(-50%, -50%);
   background-color: var(--white);
-  transition: transform 250ms ease-in-out;
-  display: inline-block;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
 }
 
 .close-button {
